istio-teaching/destinationrules/trafficPolicy/h2/h2-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http2
  labels:
    app: http2
spec:
  selector:
    matchLabels:
      app: http2
  replicas: 1
  template:
    metadata:
      labels:
        app: http2
        version: v1
    spec:
      containers:
        - name: http2
          image: registry.cn-hangzhou.aliyuncs.com/hxpdocker/jetty-http2-echo-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: http2
spec:
  selector:
    app: http2
  ports:
    - name: http2-echo
      protocol: TCP
      port: 8443
      targetPort: 8443
---
