istio-teaching/destinationrules/trafficPolicy/h2/dr-http2-h2UpgradePolicy-UPGRADE.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: http2
spec:
  host: http2
  trafficPolicy:
    connectionPool:
      http:
        h2UpgradePolicy: UPGRADE
